fixed some sizing issues on smaller screens

--- a/client/src/components/create-event/CreateEvent.scss
+++ b/client/src/components/create-event/CreateEvent.scss
@@ -40,7 +40,7 @@ button {
   .create-event > form {
     width: 100vw;
     box-sizing: border-box;
-    height: 500px;
+    height: 484px;
   }
   .create-event > form > button {
     margin-top: 15px !important;
