--- a/client/src/components/dashboard/Dashboard.scss
+++ b/client/src/components/dashboard/Dashboard.scss
@@ -27,9 +27,9 @@
   }
 
   .map-wrapper {
-    height: 110vh;
-    width: 95vw;
+    height: 100vh;
+    width: 100vw;
     align-self: flex-start;
-    margin: 0 40px 0 20px;
+    margin: 0;
   }
 }
