--- a/client/src/components/dashboard/events/Events.scss
+++ b/client/src/components/dashboard/events/Events.scss
@@ -18,7 +18,8 @@ li {
 
 @media only screen and (max-width: 1000px) {
   .events {
-    margin-bottom: 20px;
-    width: 95vw;
+    margin-bottom: 5px;
+    width: 100vw;
+    padding: 0;
   }
 }
